[gd_scene load_steps=2 format=3 uid="uid://ryvvpd6h2syn"]

[ext_resource type="Script" path="res://Scripts/MultiplayerController.gd" id="1_3ck5s"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ck5s")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 376.0
offset_top = 137.0
offset_right = 582.0
offset_bottom = 209.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 851.0
offset_top = 222.0
offset_right = 1005.0
offset_bottom = 279.0
text = "Join"

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 375.0
offset_top = 299.0
offset_right = 584.0
offset_bottom = 371.0
text = "Start"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 377.0
offset_top = 62.0
offset_right = 809.0
offset_bottom = 120.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 281.0
offset_top = 74.0
offset_right = 341.0
offset_bottom = 100.0
text = "Name:"

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 373.0
offset_top = 223.0
offset_right = 812.0
offset_bottom = 281.0

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 279.0
offset_top = 243.0
offset_right = 352.0
offset_bottom = 269.0
text = "Server IP:"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 286.0
offset_top = 422.0
offset_right = 346.0
offset_bottom = 448.0

[node name="Close" type="Button" parent="."]
layout_mode = 0
offset_left = 605.0
offset_top = 136.0
offset_right = 811.0
offset_bottom = 208.0
text = "Close Connection"

[node name="Lobby Text" type="Label" parent="."]
layout_mode = 0
offset_left = 382.0
offset_top = 479.0
offset_right = 422.0
offset_bottom = 502.0

[node name="Back tuah" type="Button" parent="."]
offset_left = 609.0
offset_top = 299.0
offset_right = 814.0
offset_bottom = 371.0
text = "Back to Menu"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="Start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="Close" to="." method="_on_close_button_down"]
[connection signal="button_down" from="Back tuah" to="." method="_on_back_button_down"]
