[gd_scene load_steps=3 format=3 uid="uid://bdc45dwwf0ww7"]

[ext_resource type="Script" path="res://Scripts/MultiplayerController.gd" id="1_tr6n8"]
[ext_resource type="Texture2D" uid="uid://cvytuc1h360et" path="res://Sprites/Menu Screens/Multiplayer Options_REF.png" id="2_uexd3"]

[node name="MultiplayerOptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tr6n8")

[node name="MultiplayerOptionsRef" type="Sprite2D" parent="."]
position = Vector2(946, 531)
texture = ExtResource("2_uexd3")

[node name="Host" type="Button" parent="."]
layout_mode = 2
anchor_left = 0.197
anchor_top = 0.407
anchor_right = 0.427
anchor_bottom = 0.61
offset_left = 0.759979
offset_top = 0.440002
offset_right = 19.16
offset_bottom = 0.200012
flat = true

[node name="Join" type="Button" parent="."]
layout_mode = 2
anchor_left = 0.546
anchor_top = 0.428
anchor_right = 0.769
anchor_bottom = 0.595
offset_left = -21.3201
offset_top = -20.24
offset_right = -0.480103
offset_bottom = 0.399963
flat = true

[node name="Back" type="Button" parent="."]
layout_mode = 2
anchor_left = 0.192
anchor_top = 0.141
anchor_right = 0.355
anchor_bottom = 0.295
offset_left = -21.64
offset_top = -0.279999
offset_right = 0.399963
offset_bottom = 0.399994
flat = true

[connection signal="pressed" from="Host" to="." method="_on_host_button_down"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_button_down"]
